# azathos

./: .config  .config.source  .gitignore  Cargo.toml  Makefile  README.md  default_cpio_list  drmnotes  init.c  no_root.patch
.cargo/: config.toml
.forgejo/workflows/: rust.yml
.github/workflows/: rust.yml
color/src/: lib.rs
display/: Cargo.toml
display/src/: cursor.rs  draw.rs  lib.rs  main.rs  ppf.rs  window.rs
echo/src/: main.rs
fb/: Cargo.toml  fb.rs
id/: Cargo.toml
id/src/: main.rs
init/: Cargo.toml
init/src/: main.rs
input/: Cargo.toml
input/src/: lib.rs  main.rs
ls/: Cargo.toml
ls/src/: main.rs
ps/: Cargo.toml
ps/src/: main.rs
root/: .schelprc  init
root/etc/: init.toml  os-release  schelprc
root/home/: welcome
root/share/display/cursors/: cursor.ppf
schelp/: Cargo.toml
schelp/src/: main.rs  signal.rs
segfault/: Cargo.toml
segfault/src/: main.rs
