[package]
name = "display"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
id_tree = "1.8.0"
slab_tree = "0.3.2"

[target.x86_64-unknown-linux-musl.dependencies]
clap = { version = "4.4.7", features = ["derive"] }
libc = "0.2.149"
fb = { path = "../fb" }
input = { path = "../input" }
