[package]
name = "ls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"

[target.x86_64-unknown-linux-musl.dependencies]
clap = { version = "4.4.7", features = ["derive"] }
color = { path = "../color" }
